Refactor SecurityConfiguration